parte final de fundamentos

--- a/Fundamentos JavaScript 1/index.html
+++ b/Fundamentos JavaScript 1/index.html
@@ -10,6 +10,11 @@
 <body>
      <p id="demo"> Estamos aprendiendo eventos de Js</p>
      <button type="button" id="button"> Hace click aca </button>
+     <button type=" button" id="boton_color"> Cambia color de fondo</button>
+     <button type=" button" id="boton_default"> Reestablece color de fondo</button>
+     <button type=" button" id="boton_ocultar"> Ocultar texto</button>
+     <p class="prueba">prueba sobre coleccion</p>
+     <p class="prueba">prueba sobre coleccion eaea</p>
      <script src="funciones.js"></script>
 </body>
 </html>
